fixed main layout bugs

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,6 +29,7 @@ html, body, #root {
     width: 100%;
     flex: 1 1 auto;
     display: flex;
+    overflow: hidden;
 }
 
 .split {
